# Programmation_GPU

./: README.md  Recherche reComputer J30.docx
Projet/Yolo/: detection_yolo.py  predictions.ipynb  test_webcam.py  training.ipynb
Projet/Yolo/Human-Dectection-4/: README.dataset.txt  README.roboflow.txt  data.yaml
Projet/Yolo/runs/detect/train/: args.yaml
Projet/Yolo/runs/detect/train2/: args.yaml
Projet/Yolo/runs/detect/train3/: args.yaml
Projet/Yolo/runs/detect/train4/: args.yaml
Projet/bg_substractor/: CMakeCache.txt  CMakeLists.txt  Makefile  bg_sub_sample.cpp  bg_substactor  bg_substractor  bg_substractor.cpp  cmake_install.cmake
Projet/helloworld/: CMakeLists.txt  helloWolrd.cpp  helloWorld
Projet/peopole_detect/: flux.cpp  flux_video  people_detect  people_detect.cpp  video_flux  video_flux.cpp
TD-TP_CUDA/TD_1/Exo_1_vector_add/: naif.cu  naif_jetson  opti_coal_stride.cu  pipo  report_naive.ncu-rep  report_optimized.ncu-rep  vector_add_naif  vector_add_optimized
TD-TP_CUDA/TD_1/Exo_2_matrix_mul/: naif.cu  naive  optimized  optimized.cu  report_naive.ncu-rep  report_optimized.ncu-rep
TD-TP_CUDA/TD_1/Exo_3_shared_mem/: bank_conflicts  bank_conflicts.cu  padding  padding.cu  report_bc.ncu-rep  report_padding.ncu-rep
TD-TP_CUDA/TD_1/Exo_5_Projet/: baseline.cu
TD-TP_CUDA/TD_1/Exo_5_Projet/old/: baseline_old.cu  shared_mem_old.cu
TD-TP_CUDA/TP_1/: exo1.c  exo1_jetson  exo1_res  exo2.cu  exo2_jetson  exo2_res  exo3_res  exo4.cu  exo4_jetson  exo4_res  exo_res  test-version  test_data  test_version  version.cu  version_jetson
(+1 files in other folders)
